--- a/Copy_of_lesson2_rf_interpretation.ipynb
+++ b/Copy_of_lesson2_rf_interpretation.ipynb
@@ -3255,7 +3255,17 @@
         "colab_type": "text"
       },
       "source": [
-        "So in this case, what I wanted to do was to first of all figure out what’s the difference between our validation set and our training set. If I understand the difference between our validation set and our training set, then that tells me what are the predictors which have a strong temporal component and therefore they may be irrelevant by the time I get to the future time period. So I do something really interesting which is I create a random forest where my dependent variable is “is it in the validation set” (is_valid). I’ve gone back and I’ve got my whole data frame with the training and validation all together and I’ve created a new column called is_valid which I’ve set to one and then for all of the stuff in the training set, I set it to zero. So I’ve got a new column which is just is this in the validation set or not and then I’m going to use that as my dependent variable and build a random forest. This is a random forest not to predict price but predict is this in the validation set or not. So if your variable were not time dependent, then it shouldn’t be possible to figure out if something is in the validation set or not."
+        "So in this case, what I wanted to do was to first of all figure out what’s the difference between our validation set and our training set. \n",
+        "</br>\n",
+        "If I understand the difference between our validation set and our training set, then that tells me what are the predictors which have a strong temporal component and therefore they may be irrelevant by the time I get to the future time period. \n",
+        "</br>\n",
+        "So I do something really interesting which is I create a random forest where my dependent variable is “is it in the validation set” (is_valid). I’ve gone back and I’ve got my whole data frame with the training and validation all together and I’ve created a new column called is_valid which I’ve set to one and then for all of the stuff in the training set, I set it to zero. \n",
+        "</br>\n",
+        "So I’ve got a new column which is just is this in the validation set or not and then I’m going to use that as my dependent variable and build a random forest. \n",
+        "This is a random forest not to predict price but predict is this in the \n",
+        "validation set or not. \n",
+        "</br>\n",
+        "So if your variable were not time dependent, then it shouldn’t be possible to figure out if something is in the validation set or not."
       ]
     },
     {
