--- a/Copy_of_lesson3_rf_foundations.ipynb
+++ b/Copy_of_lesson3_rf_foundations.ipynb
@@ -537,13 +537,34 @@
         "    def __init__(self, x, y, n_trees, sample_sz, min_leaf=5):\n",
         "        np.random.seed(42)\n",
         "        self.x,self.y,self.sample_sz,self.min_leaf = x,y,sample_sz,min_leaf\n",
+        "        \"\"\"\n",
+        "        For above line of code:\n",
+        "        This is my way of coding. Most people thing this is horrible, but I prefer to be able to see everything at once and \n",
+        "        so I know in my code anytime I see something that looks like this, it’s always all of the stuff in the method being set. \n",
+        "        If I did it a different way, then half of the code now come off the bottom of the page and you can’t see it.\n",
+        "        \"\"\"\n",
         "        self.trees = [self.create_tree() for i in range(n_trees)]\n",
         "\n",
         "    def create_tree(self):\n",
         "        rnd_idxs = np.random.permutation(len(self.y))[:self.sample_sz]\n",
+        "        \"\"\"\n",
+        "We’ve basically said ok, we could pick some random IDs. This is a good trick to know. \n",
+        "If you call np.random.permutation passing in an int, it’ll give you back a randomly shuffled sequence from zero to that int. \n",
+        "So if you grab the first :n items of that, that’s now a random subsample. \n",
+        "So this is not doing bootstrapping (i.e. we are not doing sampling with replacement) here which I think is fine.\n",
+        "        \"\"\"\n",
         "        return DecisionTree(self.x.iloc[rnd_idxs], self.y[rnd_idxs], min_leaf=self.min_leaf)\n",
         "        \n",
         "    def predict(self, x):\n",
+        "        \"\"\"\n",
+        "Okay, let’s write a predict function. \n",
+        "Q: How do you predict in a random forest? \n",
+        "A: For a particular row (or rows), go through each tree, calculate its prediction. \n",
+        "So here is a list comprehension that is calculating the prediction for every tree for x. \n",
+        "I don’t know if x is one row or multiple rows, it doesn’t matter as long as tree.predict works on it. \n",
+        "And once you’ve got a list of things, \n",
+        "a cool thing to know is you can pass `numpy.mean` a regular non numpy list and it will take the mean — you just need to tell it axis=0 means average across the lists. \n",
+        "        \"\"\"\n",
         "        return np.mean([t.predict(x) for t in self.trees], axis=0)"
       ],
       "execution_count": 0,
