--- a/Copy_of_lesson3_rf_foundations.ipynb
+++ b/Copy_of_lesson3_rf_foundations.ipynb
@@ -61,7 +61,7 @@
         "!pip install \"torchtext==0.2.3\"\n",
         "!pip install \"scikit-learn == 0.20.4\""
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
         "os.environ['valentinovizner'] = \"2b6a47d2c04ff985d1e06b4e258b6142\" # username from the json file os.environ['KAGGLEKEY'] = \"xxxxxxxxxxxxxxxxxxxxxxxxxxxx\" # key from the json file\n",
         "!kaggle competitions download -c bluebook-for-bulldozers -p /content/data/bulldozers # api copied from kaggle"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -317,7 +317,7 @@
         "#!7za x -y \"data/bulldozers/*.7z\" -o/data/bulldozers/unzipped\n",
         "PATH = \"data/bulldozers/unzipped/\""
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,17 +412,17 @@
       "metadata": {
         "id": "k6FtaZFNfaFR",
         "colab_type": "code",
+        "outputId": "58bd1651-3414-4d52-b2bb-4bbe92e2bbbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "58bd1651-3414-4d52-b2bb-4bbe92e2bbbe"
+        }
       },
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +838,7 @@
       "source": [
         "m.trees[0]"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +868,7 @@
       "source": [
         "m.trees[0].idxs"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +980,7 @@
         "x_samp,y_samp = tree.x, tree.y\n",
         "x_samp.columns"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,7 +1010,7 @@
       "source": [
         "tree"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +1052,7 @@
         "m.fit(x_samp, y_samp)\n",
         "draw_tree(m.estimators_[0], x_samp, precision=2)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1149,7 +1149,7 @@
         "%timeit find_better_split(tree,1)\n",
         "tree"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1173,6 +1173,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "md3RLB73s_6N",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "PrrXMkCgfaF_",
@@ -1186,7 +1196,7 @@
       "source": [
         "find_better_split(tree,0); tree"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1223,6 +1233,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "keKiJnd4vRQX",
+        "colab_type": "text"
+      },
+      "source": [
+        "So the reason this is handy for us is that if we first of all sort our data [47:13]. Then if you think about it, as we start going down one step at a time, then each group is exactly the same as the previous group on the left hand side with one more thing in it and on the right hand side with one less thing in it. So given that we just have to keep track of sum of x and sum of x², we can just add one more thing to x, one more thing to x² on the left and remove one thing on the right. So we don’t have to go through the whole lot each time and so we can turn this into O(n) algorithm. So that’s all I do here:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Xw3b73idfaGD",
@@ -1236,6 +1256,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ll7gKuc-vdFz",
+        "colab_type": "text"
+      },
+      "source": [
+        "I sort the data, and then I’ll keep track of the count of things on the right (rhs_cnt), the sum of things on the right (rhs_sum), and sum of squares on the right (rhs_sum2). Initially everything is on the right hand side. So initially n is the count, y.sum() is the sum on the right, and y² (y**2) sum is the sum of squares on the right. Then nothing is initially on the left, so it’s zeros. Then we just have to loop through each observation:\n",
+        "Add one to the left hand count, subtract one from the right hand count.\n",
+        "Add the value to the left hand sum, subtract it from the right hand sum.\n",
+        "Add the value squared to the left hand, subtract it from the right hand.\n",
+        "Now we do need to be careful though because if we are saying less than or equal to one, for example, we are not stopping at the first row but we have to have everything in that group.\n",
+        "\n",
+        "So the other thing I’m going to do is I’m going to make sure that the next value is not the same as this value. If it is, I’m going to skip over it. So I’m just going to double check that this value and the next one aren’t the same (if xi==sort_x[i+1]:). As long as they are not the same, I can keep going ahead and calculate my standard deviation now by passing in the count, the sum, and the sum squared. And there is that formula:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pXHGhrKafaGG",
@@ -1245,7 +1281,7 @@
       "source": [
         "def std_agg(cnt, s1, s2): return math.sqrt((s2/cnt) - (s1/cnt)**2)\n",
         "\n",
-        "def find_better_split(self, var_idx):\n",
+        "def find_better_split_foo(self, var_idx):\n",
         "    x,y = self.x.values[self.idxs,var_idx], self.y[self.idxs]\n",
         "    \n",
         "    sort_idx = np.argsort(x)\n",
@@ -1279,7 +1315,7 @@
         "colab": {}
       },
       "source": [
-        "%timeit find_better_split(tree,1)\n",
+        "%timeit find_better_split_foo(tree,1)\n",
         "tree"
       ],
       "execution_count": 0,
@@ -1314,7 +1350,7 @@
         "colab": {}
       },
       "source": [
-        "find_better_split(tree,0); tree"
+        "find_better_split_foo(tree,0); tree"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1333,6 +1369,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AAhG7tLM8KkM",
+        "colab_type": "text"
+      },
+      "source": [
+        "It’s important to understand how namespaces work in every language that you use. One of the most important thing is understanding how it fitures out what a name refers to. So this here (DecisionTree.find_varsplit) means find_better_split as defined inside DecisionTree class and nowhere else. This one on the right means find_better_split_foo in the global namespace. A lot of languages do not have a global namespace but Python does. So even if they happen to have the same letters in the same order, they are not referring in any way to the same thing. It’s like this family over here may have somebody called Jeremy, and my family has somebody called Jeremy. Our names happen to be the same but we are not the same person."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CEcb-x30faGM",
@@ -1340,7 +1386,7 @@
         "colab": {}
       },
       "source": [
-        "DecisionTree.find_better_split = find_better_split"
+        "DecisionTree.find_better_split = find_better_split_foo"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1409,6 +1455,22 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7e-MXIcO8a99",
+        "colab_type": "text"
+      },
+      "source": [
+        "So we had this thing called find_varsplit which just went through every column and try to see if there is a better split there. \n",
+        "</br>\n",
+        "But actually, we need to go a bit further than that. \n",
+        "</br>\n",
+        "We also have to see whether there is a better split in the left and the right sides that we just created. \n",
+        "</br>\n",
+        "In other words, the left hand side and the right hand side should become decision tree themselves."
       ]
     },
     {
