--- a/Copy_of_lesson3_rf_foundations.ipynb
+++ b/Copy_of_lesson3_rf_foundations.ipynb
@@ -1719,6 +1719,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l4r6n2WOYJsf",
+        "colab_type": "text"
+      },
+      "source": [
+        " So this for xi in x is kind of handy, right? Notice that you can do for blah in array with a numpy array regardless of the rank of the array. Regardless of the number of axes in the array. What it does is it will loop through the leading axis."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "AB1y0eTgfaGq",
