--- a/Copy_of_lesson3_rf_foundations.ipynb
+++ b/Copy_of_lesson3_rf_foundations.ipynb
@@ -1798,6 +1798,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W7-sEHFU_frm",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DufsmnPsfaGy",
@@ -1806,7 +1816,17 @@
       },
       "source": [
         "def predict_row(self, xi):\n",
+        "    \"\"\"\n",
+        "If we are at a leaf node, then the prediction is just equal to whatever that value was which we calculated right back in the \n",
+        "original tree constructor (just the average of the y’s). If it’s not a leaf node, then we have to figure out whether to down the left hand path or the right hand \n",
+        "path to get the prediction\n",
+        "    \"\"\"\n",
         "    if self.is_leaf: return self.val\n",
+        "\n",
+        "    \"\"\"\n",
+        "    So if this variable in this row (xi[self.var_idx]) is less than or equal to the amount we decided to split on, then we go down the left path; otherwise we go down the right path. \n",
+        "    And then having figured out what path/tree we want, then we can just call predict_row on that. \n",
+        "    \"\"\"\n",
         "    t = self.lhs if xi[self.var_idx]<=self.split else self.rhs\n",
         "    return t.predict_row(xi)\n",
         "\n",
@@ -1847,6 +1867,10 @@
         "colab": {}
       },
       "source": [
+        "\"\"\"\n",
+        "Alpha means how transparent the things, not just in matplotlib but in every graphics package in the world pretty much. \n",
+        "So if you set alpha to less than 1, then this is saying you would need 20 dots on top of each other for it to be fully blue.\n",
+        "\"\"\"\n",
         "plt.scatter(preds, y_valid, alpha=0.05)"
       ],
       "execution_count": 0,
